<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_musics_back"
            android:background="@mipmap/ic_dialog_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_musics_back"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/backImageView"
            app:layout_constraintTop_toTopOf="@+id/backImageView"
            app:layout_constraintBottom_toBottomOf="@+id/backImageView"/>

        <Button
            android:id="@+id/deleatAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_musics_delete_all"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/backImageView"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/deleatAllButton">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/my_musics_play_empty"
            app:layout_constraintTop_toTopOf="@+id/swipeRefresh"
            app:layout_constraintBottom_toBottomOf="@+id/swipeRefresh"
            app:layout_constraintLeft_toLeftOf="@+id/swipeRefresh"
            app:layout_constraintRight_toRightOf="@+id/swipeRefresh"/>

        <ImageView
            android:id="@+id/playImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_voice_play"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/my_musics_play" />

        <TextView
            android:id="@+id/playNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/playSeekBar"
            app:layout_constraintBottom_toTopOf="@+id/playSeekBar"/>

        <TextView
            android:id="@+id/playTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="@+id/playSeekBar"
            app:layout_constraintTop_toTopOf="@+id/playNameTextView"
            app:layout_constraintBottom_toBottomOf="@+id/playNameTextView"/>

        <SeekBar
            android:id="@+id/playSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@+id/playImageView"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>